# simpsons

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.dvc/: config
conf/: cfg.yaml
conf/callbacks/: callbacks.yaml
conf/inference/: inference.yaml
conf/logging/: logging.yaml
conf/module/: module.yaml
conf/trainer/: trainer.yaml
data/journey-springfield/: .gitignore  test.dvc  testset.dvc  train.dvc
docs/: conf.py  index.rst  modules.rst  simpsons.rst
models/simpsons_net/: .gitignore  epoch=12-val_loss=0.5309.ckpt.dvc
simpsons/: augmentation.py  check_data.py  classifier.py  convert_to_onnx.py  dataset.py  inference.py  model.py  train.py
tests/: test_ci.py  test_classifier.py  test_data.py
triton/: Dockerfile  docker-compose.yml
triton/sources/: model.onnx.dvc  requirements.txt  triton.py
triton/sources/static/: index.html
wandb/run-20250518_165429-zzom162i/: run-zzom162i.wandb
wandb/run-20250518_165429-zzom162i/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
