[project]
name = "simpsons"
version = "0.1.0"
description = "Little silly project"
authors = [
    {name = "Renata Kostolina",email = "kostolina.renata@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch (>=2.6.0,<3.0.0)",
    "sphinx (>=4.0,<5.0)",
    "autodocsumm (>=0.2.14,<0.3.0)"
]

[tool.poetry]
packages = [{include = "simpsons", from = "src"}]
[tool.black]
line-length = 100
[tool.flake8]
max-line-length = 100


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
